syntax = "proto3";

package content;

import "entities.proto";

service ContentService {
    rpc create (CreateContentRequest) returns (CreateContentResponse);
    rpc update (UpdateContentRequest) returns (UpdateContentResponse);
    rpc delete (DeleteContentRequest) returns (DeleteContentResponse);
    rpc search (SearchContentRequest) returns (SearchContentResponse);
    rpc createBulk (CreateBulkContentRequest) returns (CreateBulkContentResponse);
    rpc updateBulk (UpdateBulkContentRequest) returns (UpdateBulkContentResponse);
    rpc deleteBulk (DeleteBulkContentRequest) returns (DeleteBulkContentResponse);
    rpc getStats (GetContentStatsRequest) returns (GetContentStatsResponse);
}

message UpdateContentRequest {
    ContentBodyDTO contentBody = 1;
    string entityName = 2;
    entities.ContextDTO context = 3;
    entities.DataSourceEnumDTO source = 4;
}

message UpdateContentResponse {
    ContentBodyDTO contentBody = 1;
}

message DeleteContentRequest {
    string entityName = 1;
    string id = 2;
    entities.ContextDTO context = 3;
    entities.DataSourceEnumDTO source = 4;
}

message DeleteContentResponse {
    bool success = 1;
}
message SearchContentRequest {
    string entityName = 1;
    entities.SearchQueryDTO query = 2;
    entities.ContextDTO context = 3;
    entities.DataSourceEnumDTO source = 4;
}

message SearchContentResponse {
    repeated ContentBodyDTO results = 1;
    int32 totalResults = 2;
    int32 totalPages = 3;
    int32 currentPage = 4;
}

message GetContentStatsRequest {
    entities.ContextDTO context = 1;
    repeated string entityNames = 2;
    entities.DataSourceEnumDTO source = 3;
}

message GetContentStatsResponse {
    repeated ContentStatDTO stats = 1;
}

message ContentStatDTO {
    string title = 1;
    string type = 2;
    int32 count = 3;
    string icon = 4;
    string entity = 5;
}

message CreateBulkContentRequest {
    repeated CreateContentRequest requests = 1;
}

message CreateBulkContentResponse {
    repeated CreateContentResponse responses = 1;
}

message UpdateBulkContentRequest {
    repeated UpdateContentRequest requests = 1;
}

message UpdateBulkContentResponse {
    repeated UpdateContentResponse responses = 1;
}

message DeleteBulkContentRequest {
    repeated DeleteContentRequest requests = 1;
}

message DeleteBulkContentResponse {
    repeated DeleteContentResponse responses = 1;
}

message CreateContentRequest {
    entities.DataSourceEnumDTO source = 1;
    ContentBodyDTO contentBody = 2;
    string entityName = 3;
    entities.ContextDTO context = 4;
}

message CreateContentResponse {
    ContentBodyDTO contentBody = 1;
}

message ContentBodyDTO {
    oneof data {
        entities.ItemDTO Item = 1;
        entities.PastExperienceDTO PastExperience = 2;
        entities.CharacterMemoryDTO CharacterMemory = 3;
        entities.MemoryDTO Memory = 4;
        entities.MemoryPoolDTO MemoryPool = 5;
        entities.MemoryPoolEntryDTO MemoryPoolEntry = 6;
        entities.SkillDTO Skill = 7;
        entities.SkillSetDTO SkillSet = 8;
        entities.EquipmentSlotDTO EquipmentSlot = 9;
        entities.StorageSlotDTO StorageSlot = 10;
        entities.TraitDTO Trait = 11;
        entities.AddictionDTO Addiction = 12;
        entities.BackgroundDTO Background = 13;
        entities.BirthsignDTO Birthsign = 14;
        entities.CharacterDTO Character = 15;
        entities.CharacterGenInstructionDTO CharacterGenInstruction = 16;
        entities.CharacterGroupGenInstructionDTO CharacterGroupGenInstruction = 17;
        entities.CharacterProfessionDTO CharacterProfession = 18;
        entities.DiseaseDTO Disease = 19;
        entities.EffectDTO Effect = 20;
        entities.FactDTO Fact = 21;
        entities.FactionDTO Faction = 22;
        entities.ItemSetDTO ItemSet = 23;
        entities.MoodDTO Mood = 24;
        entities.NeedDTO Need = 25;
        entities.PersonalityProfileDTO PersonalityProfile = 26;
        entities.RaceDTO Race = 27;
        entities.ReligionDTO Religion = 28;
        entities.ResistanceDTO Resistance = 29;
        entities.StatusDTO Status = 30;
        entities.TagDTO Tag = 31;
    }
}
